// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Bubble /> should adopt the "backgroundColor" prop 1`] = `
.c0 {
  display: inline-block;
  background-color: white;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should adopt the "isLeftHanded" prop 1`] = `
.c0 {
  display: inline-block;
  background-color: inherit;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should adopt the "padding" prop 1`] = `
.c0 {
  display: inline-block;
  background-color: inherit;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0 1em;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should adopt the "showArrowBreakpoint" prop 1`] = `
.c0 {
  display: inline-block;
  background-color: inherit;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:10rem) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;

exports[`<Bubble /> should render and match the snapshot 1`] = `
.c0 {
  display: inline-block;
  background-color: inherit;
  border-radius: 0.5rem;
  box-shadow: 0 0 10px grey;
  color: inherit;
  padding: 0;
}

@media (min-height:100%) {
  .c0 {
    margin-right: 0;
    border-bottom-left-radius: 0.5rem;
    border-bottom-right-radius: 0;
    box-shadow: none;
  }
}

<div
  className="c0"
/>
`;
